LBM-Client/src/components/DashboardUser/Dashboard/Dashboard.module.scss
$greycolor: #F4F8EE;
$primarycolor: var(--Libertum-color);

$bigbutton: (
    // min-width: 12rem,
    height: 13.5rem,
    flex-shrink: 0,
    border-radius: 1rem,    
    display: flex,
    flex-direction: column,
    justify-content: space-around,
    flex-basis: calc(33.33% - .2rem)/* Restamos 1rem para dejar espacio entre los botones */
);
$texto-button: (
  color: var(--0-c-0507, #0C0507),
  font-family: Inter,
  font-size: 0.875rem,
  font-style: normal,
  font-weight: 400,
  line-height: 1.5rem,
  text-transform: capitalize,
  text-align: left,
  margin-top: 1rem,
  margin-left: 0.9rem
);

$buttonh2: (
    color: var(--0-c-0507, #0C0507),
    font-family: Inter,
    font-size: 1.5rem,
    font-style: normal,
    font-weight: 500,
    line-height: 2.125rem,
    text-align: left,
    margin-bottom: 2rem,
    margin-left: 0.9rem,
    margin-top: auto, /* Añade esta línea */
);


.welcome{
    text-align: left;
    padding-left: 1rem;
    color: var(--gray-gray-700, #2D3748);
    font-family: Montserrat;
    font-size: 0.875rem;
    font-style: normal;
    font-weight: 700;
    line-height: 140%; /* 1.225rem */
    // margin-bottom: 2rem;
}

.mainContainer{
    display: flex;
    width: 100%;
    // height: 17rem;
    justify-content: space-between;
    align-items: center;
    flex-shrink: 0;
    padding: 1rem;
    gap: 1rem;


    @media (max-width: 720px){

       display: block;
       height: fit-content;
      }
   
}

.mainContainer section{
    flex: 1;
    height: 18rem;
    
}



.section1{
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
    // width: 50%;
    // height: 17rem;
    flex-shrink: 0;
    border-radius: 16px;
    background: $greycolor;
    padding: 2rem;


    h2{
        width: 238.565px;
        color: #2D3748;
        font-family: Montserrat;
        font-size: 1rem;
        font-style: normal;
        font-weight: 700;
        line-height: 150%; /* 1.5rem */
        text-transform: uppercase;
        margin-bottom: 1rem;
    
        // @media (max-width: 720px){
    
        //     margin-left: 0;
        //     text-align: center;
    
        //    }
    }

    p{
        color: var(--gray-gray-400, #A0AEC0);
        font-family: Montserrat;
        font-size: 0.875rem;
        font-style: normal;
        font-weight: 400;
        line-height: 140%; /* 1.225rem */
        text-align: left;
    }

    button{
        display: flex;
        padding: 0.5rem 1rem;
        text-align: center;
        font-family: Montserrat;
        font-size: 0.875rem;
        font-style: normal;
        font-weight: 700;
        line-height: 1.5rem; /* 171.429% */
        letter-spacing: 0.00875rem;
        // justify-content: center;
        // align-items: center;
        gap: 0.625rem;
        border-radius: 0.625rem;
        background: $primarycolor;    
        color: #F4F8EE;
        justify-self: flex-start;
        
        // margin-left: 30px;
        margin-top:1.25rem ;    
    }

    img{
        width: 14rem;
        height: 12rem;
        flex-shrink: 0;
        margin-right: 0px;
        // margin-bottom: 1.2rem;
    
        @media (max-width: 720px){
    
            display:none;
           }
}
}


.section2{
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
    // width: 50%;
    // height: 17rem;
    flex-shrink: 0;
    border-radius: 16px;
    background: $greycolor;
    // padding: 2rem;


    h2{
        width: 238.565px;
        color: #2D3748;
        font-family: Montserrat;
        font-size: 1rem;
        font-style: normal;
        font-weight: 700;
        line-height: 150%; /* 1.5rem */
        text-transform: uppercase;
        margin-bottom: 1rem;
    
        // @media (max-width: 720px){
    
        //     margin-left: 0;
        //     text-align: center;
    
        //    }
    }

    p{
        color: var(--gray-gray-400, #A0AEC0);
        font-family: Montserrat;
        font-size: 0.875rem;
        font-style: normal;
        font-weight: 400;
        line-height: 140%; /* 1.225rem */
        text-align: left;
    }

    button{
        display: flex;
        padding: 0.5rem 1rem;
        text-align: center;
        font-family: Montserrat;
        font-size: 0.875rem;
        font-style: normal;
        font-weight: 700;
        line-height: 1.5rem; /* 171.429% */
        letter-spacing: 0.00875rem;
        // justify-content: center;
        // align-items: center;
        gap: 0.625rem;
        border-radius: 0.625rem;
        background: $primarycolor;    
        color: #F4F8EE;
        justify-self: flex-start;
        
        // margin-left: 30px;
        margin-top:1.25rem ;  
    }

    img{
        width: 12rem;
        height: 12rem;
        flex-shrink: 0;
        margin-right: 0px;
        margin-left: 0px;
        // margin-bottom: 1.2rem;
    
        @media (max-width: 720px){
    
            display:none;
           }
}
}


.section3{
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    // width: calc(1/2);
    height: 20rem;
    flex-shrink: 0;
    border-radius: 16px;
    background: $greycolor;
    padding: 2rem;

    div{
        display: flex;
        width: 100%;
        
        margin-bottom: 1rem;
           
        h2{
            // width: 238.565px;
            color: #2D3748;
            font-family: Montserrat;
            font-size: 1rem;
            font-style: normal;
            font-weight: 700;
            line-height: 150%; /* 1.5rem */
            text-transform: uppercase;
            // margin-bottom: 1rem;
            text-align: left;
        
            // @media (max-width: 720px){
        
            //     margin-left: 0;
            //     text-align: center;
        
            //    }
        }
    
        p{
            color: var(--gray-gray-400, #A0AEC0);
            font-family: Montserrat;
            font-size: 0.875rem;
            font-style: normal;
            font-weight: 400;
            line-height: 140%; /* 1.225rem */
            text-align: left; 
            margin-bottom: 1rem;     
            width: 18rem     
            
        }
    
        button{
            display: flex;
            padding: 0.5rem 1rem;
            text-align: center;
            font-family: Montserrat;
            font-size: 0.875rem;
            font-style: normal;
            font-weight: 700;
            line-height: 1.5rem; /* 171.429% */
            letter-spacing: 0.00875rem;
            // justify-content: center;
            // align-items: center;
            gap: 0.625rem;
            border-radius: 0.625rem;
            background: $primarycolor;    
            color: #F4F8EE;
            justify-self: flex-end;
            
            // margin-left: 30px;
            margin-top:1.25rem ;    

        }
    }

    

    img{
        width: 100%;
        height: 12rem;
        flex-shrink: 0;
        margin-right: 0px;
        // margin-bottom: 1.2rem;
    
        @media (max-width: 720px){
    
            display:none;
           }
}
}

